// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/PieChartCard advanced customisation using overrides 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="bx--modal is-visible"
      data-floating-menu-container={true}
    >
      <div
        className="iot--card iot--pie-chart-card iot--card--wrapper"
        data-testid="basicCardStoryTest"
        id="basicCardStory"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
            "height": "calc(100% - 50px)",
            "width": "calc(100% - 50px)",
          }
        }
      >
        <div
          className="iot--card--header"
          data-testid="basicCardStoryTest-header"
        >
          <span
            className="iot--card--title"
            data-testid="basicCardStoryTest-title"
            title="Animations turned on and FlyoutMenu added to table"
          >
            <div
              className="iot--card--title--text"
              data-testid="basicCardStoryTest-title-notip"
            >
              Animations turned on and FlyoutMenu added to table
            </div>
          </span>
          <div
            className="iot--card--toolbar"
            data-testid="basicCardStoryTest-toolbar"
          >
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
              data-testid="basicCardStoryTest-toolbar-close-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              title="Close"
              type="button"
            >
              <svg
                aria-hidden="true"
                aria-label="Close"
                className="bx--btn__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content iot--card--content--expanded"
          data-testid="basicCardStoryTest-content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="iot--pie-chart-container iot--pie-chart-container__expanded"
          >
            <div
              id="mock-pie-chart"
            />
            <div
              className="iot--pie-chart-card--stateful-table iot--table-container bx--data-table-container"
              data-testid="basicCardStory-table-table-container"
            >
              <section
                aria-label="data table toolbar"
                className="bx--table-toolbar"
                data-testid="basicCardStory-table-table-toolbar"
              >
                <div
                  aria-hidden={true}
                  className="bx--batch-actions iot--table-batch-actions"
                  data-testid="basicCardStory-table-table-toolbar-batch-actions"
                  onScroll={[Function]}
                >
                  <div
                    className="bx--batch-summary"
                  >
                    <p
                      className="bx--batch-summary__para"
                    >
                      <span
                        dir="auto"
                      >
                        0 items selected
                      </span>
                    </p>
                  </div>
                  <div
                    className="bx--action-list"
                  >
                    <button
                      aria-describedby={null}
                      aria-pressed={null}
                      className="bx--batch-summary__cancel bx--btn bx--btn--primary"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex={-1}
                      type="button"
                    >
                      Cancel
                    </button>
                  </div>
                </div>
                <div
                  className="bx--toolbar-content iot--table-toolbar-content"
                  data-testid="basicCardStory-table-table-toolbar-content"
                >
                  <button
                    aria-describedby={null}
                    className="bx--btn--icon-only iot--tooltip-svg-wrapper iot--btn iot--btn-icon-selection bx--btn bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
                    data-testid="download-button"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <div
                      className="bx--assistive-text"
                      onMouseEnter={[Function]}
                    >
                      Download table content
                    </div>
                    <svg
                      aria-hidden="true"
                      aria-label="Download table content"
                      className="bx--btn__icon"
                      fill="currentColor"
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M26 24v4H6V24H4v4H4a2 2 0 002 2H26a2 2 0 002-2h0V24zM26 14L24.59 12.59 17 20.17 17 2 15 2 15 20.17 7.41 12.59 6 14 16 24 26 14z"
                      />
                    </svg>
                  </button>
                  <div
                    className="iot--flyout-menu iot--flyout-menu__bottom iot--flyout-menu__light"
                    data-testid="flyout-menu-container"
                    style={
                      Object {
                        "--tooltip-visibility": "hidden",
                      }
                    }
                  >
                    <button
                      aria-describedby={null}
                      aria-label=""
                      className="iot--flyout-menu--trigger-button iot--btn bx--btn bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
                      data-testid="flyout-menu-button"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      <div
                        className="bx--assistive-text"
                        onMouseEnter={[Function]}
                      >
                        
                      </div>
                      <svg
                        aria-hidden={true}
                        aria-label=""
                        className="bx--btn__icon"
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M30 8h-4.1c-.5-2.3-2.5-4-4.9-4s-4.4 1.7-4.9 4H2v2h14.1c.5 2.3 2.5 4 4.9 4s4.4-1.7 4.9-4H30V8zM21 12c-1.7 0-3-1.3-3-3s1.3-3 3-3 3 1.3 3 3S22.7 12 21 12zM2 24h4.1c.5 2.3 2.5 4 4.9 4s4.4-1.7 4.9-4H30v-2H15.9c-.5-2.3-2.5-4-4.9-4s-4.4 1.7-4.9 4H2V24zM11 20c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3S9.3 20 11 20z"
                        />
                      </svg>
                    </button>
                    <div
                      className="iot--flyout-menu--tooltip-anchor"
                      data-floating-menu-container={true}
                    >
                      <div
                        aria-describedby={null}
                        aria-expanded={false}
                        aria-label=""
                        className="bx--tooltip__label"
                        id="test-flyout-id"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        role="button"
                        tabIndex={0}
                      />
                    </div>
                  </div>
                </div>
              </section>
              <div
                className="addons-iot-table-container"
              >
                <div
                  className="bx--data-table-content"
                >
                  <table
                    className="bx--data-table bx--data-table--no-border"
                    data-testid="basicCardStoryTest-table"
                    id="basicCardStory-table"
                    title={null}
                  >
                    <thead
                      data-testid="basicCardStory-table-table-head"
                      onMouseMove={null}
                      onMouseUp={null}
                    >
                      <tr>
                        <th
                          align="start"
                          className="table-header-label-start iot--table-head--table-header"
                          data-column="2V2N 9KYPM"
                          data-floating-menu-container={true}
                          data-testid="basicCardStory-table-table-head-column-2V2N 9KYPM"
                          id="column-2V2N 9KYPM"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <span
                            className="bx--table-header-label"
                          >
                            <span
                              className=""
                              title="2V2N 9KYPM"
                            >
                              2V2N 9KYPM
                            </span>
                          </span>
                        </th>
                        <th
                          align="start"
                          className="table-header-label-start iot--table-head--table-header"
                          data-column="L22I P66EP L22I P66EP"
                          data-floating-menu-container={true}
                          data-testid="basicCardStory-table-table-head-column-L22I P66EP L22I P66EP"
                          id="column-L22I P66EP L22I P66EP"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <span
                            className="bx--table-header-label"
                          >
                            <span
                              className=""
                              title="L22I P66EP L22I P66EP"
                            >
                              L22I P66EP L22I P66EP
                            </span>
                          </span>
                        </th>
                        <th
                          align="start"
                          className="table-header-label-start iot--table-head--table-header"
                          data-column="JQAI 2M4L1"
                          data-floating-menu-container={true}
                          data-testid="basicCardStory-table-table-head-column-JQAI 2M4L1"
                          id="column-JQAI 2M4L1"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <span
                            className="bx--table-header-label"
                          >
                            <span
                              className=""
                              title="JQAI 2M4L1"
                            >
                              JQAI 2M4L1
                            </span>
                          </span>
                        </th>
                        <th
                          align="start"
                          className="table-header-label-start iot--table-head--table-header"
                          data-column="J9DZ F37AP"
                          data-floating-menu-container={true}
                          data-testid="basicCardStory-table-table-head-column-J9DZ F37AP"
                          id="column-J9DZ F37AP"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <span
                            className="bx--table-header-label"
                          >
                            <span
                              className=""
                              title="J9DZ F37AP"
                            >
                              J9DZ F37AP
                            </span>
                          </span>
                        </th>
                        <th
                          align="start"
                          className="table-header-label-start iot--table-head--table-header"
                          data-column="YEL48 Q6XK YEL48"
                          data-floating-menu-container={true}
                          data-testid="basicCardStory-table-table-head-column-YEL48 Q6XK YEL48"
                          id="column-YEL48 Q6XK YEL48"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <span
                            className="bx--table-header-label"
                          >
                            <span
                              className=""
                              title="YEL48 Q6XK YEL48"
                            >
                              YEL48 Q6XK YEL48
                            </span>
                          </span>
                        </th>
                        <th
                          align="start"
                          className="table-header-label-start iot--table-head--table-header"
                          data-column="Misc"
                          data-floating-menu-container={true}
                          data-testid="basicCardStory-table-table-head-column-Misc"
                          id="column-Misc"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <span
                            className="bx--table-header-label"
                          >
                            <span
                              className=""
                              title="Misc"
                            >
                              Misc
                            </span>
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      aria-live="polite"
                      data-testid="basicCardStory-table-table-body"
                    >
                      <tr
                        className="iot--table__row iot--table__row--selectable"
                        onClick={[Function]}
                      >
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="2V2N 9KYPM"
                          data-offset={0}
                          id="cell-basicCardStory-table-basicCardStory-table-row-2V2N 9KYPM"
                          offset={0}
                        >
                          <span
                            className="iot--table__cell__offset"
                            style={
                              Object {
                                "--row-nesting-offset": "0px",
                              }
                            }
                          >
                            <span
                              className=""
                              title={1}
                            >
                              1
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="L22I P66EP L22I P66EP"
                          data-offset={0}
                          id="cell-basicCardStory-table-basicCardStory-table-row-L22I P66EP L22I P66EP"
                          offset={0}
                        >
                          <span
                            className="iot--table__cell__offset"
                            style={
                              Object {
                                "--row-nesting-offset": "0px",
                              }
                            }
                          >
                            <span
                              className=""
                              title={10}
                            >
                              10
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="JQAI 2M4L1"
                          data-offset={0}
                          id="cell-basicCardStory-table-basicCardStory-table-row-JQAI 2M4L1"
                          offset={0}
                        >
                          <span
                            className="iot--table__cell__offset"
                            style={
                              Object {
                                "--row-nesting-offset": "0px",
                              }
                            }
                          >
                            <span
                              className=""
                              title={20}
                            >
                              20
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="J9DZ F37AP"
                          data-offset={0}
                          id="cell-basicCardStory-table-basicCardStory-table-row-J9DZ F37AP"
                          offset={0}
                        >
                          <span
                            className="iot--table__cell__offset"
                            style={
                              Object {
                                "--row-nesting-offset": "0px",
                              }
                            }
                          >
                            <span
                              className=""
                              title={50}
                            >
                              50
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="YEL48 Q6XK YEL48"
                          data-offset={0}
                          id="cell-basicCardStory-table-basicCardStory-table-row-YEL48 Q6XK YEL48"
                          offset={0}
                        >
                          <span
                            className="iot--table__cell__offset"
                            style={
                              Object {
                                "--row-nesting-offset": "0px",
                              }
                            }
                          >
                            <span
                              className=""
                              title={15}
                            >
                              15
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Misc"
                          data-offset={0}
                          id="cell-basicCardStory-table-basicCardStory-table-row-Misc"
                          offset={0}
                        >
                          <span
                            className="iot--table__cell__offset"
                            style={
                              Object {
                                "--row-nesting-offset": "0px",
                              }
                            }
                          >
                            <span
                              className=""
                              title={40}
                            >
                              40
                            </span>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/PieChartCard basic 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--pie-chart-card iot--card--wrapper"
      data-testid="basicCardStoryTest"
      id="basicCardStory"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="basicCardStoryTest-header"
      >
        <span
          className="iot--card--title"
          data-testid="basicCardStoryTest-title"
          title="Schools"
        >
          <div
            className="iot--card--title--text"
            data-testid="basicCardStoryTest-title-notip"
          >
            Schools
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="basicCardStoryTest-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="basicCardStoryTest-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="basicCardStoryTest-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--pie-chart-container"
        >
          <div
            id="mock-pie-chart"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/PieChartCard custom colors 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--pie-chart-card iot--card--wrapper"
      data-testid="basicCardStoryTest"
      id="basicCardStory"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="basicCardStoryTest-header"
      >
        <span
          className="iot--card--title"
          data-testid="basicCardStoryTest-title"
          title="Schools"
        >
          <div
            className="iot--card--title--text"
            data-testid="basicCardStoryTest-title-notip"
          >
            Schools
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="basicCardStoryTest-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="basicCardStoryTest-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="basicCardStoryTest-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--pie-chart-container"
        >
          <div
            id="mock-pie-chart"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/PieChartCard custom labels 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--pie-chart-card iot--card--wrapper"
      data-testid="basicCardStoryTest"
      id="basicCardStory"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="basicCardStoryTest-header"
      >
        <span
          className="iot--card--title"
          data-testid="basicCardStoryTest-title"
          title="Schools"
        >
          <div
            className="iot--card--title--text"
            data-testid="basicCardStoryTest-title-notip"
          >
            Schools
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="basicCardStoryTest-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="basicCardStoryTest-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="basicCardStoryTest-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--pie-chart-container"
        >
          <div
            id="mock-pie-chart"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/PieChartCard custom tooltip 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--pie-chart-card iot--card--wrapper"
      data-testid="basicCardStoryTest"
      id="basicCardStory"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="basicCardStoryTest-header"
      >
        <span
          className="iot--card--title"
          data-testid="basicCardStoryTest-title"
          title="Schools"
        >
          <div
            className="iot--card--title--text"
            data-testid="basicCardStoryTest-title-notip"
          >
            Schools
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="basicCardStoryTest-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="basicCardStoryTest-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="basicCardStoryTest-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--pie-chart-container"
        >
          <div
            id="mock-pie-chart"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/PieChartCard no data 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--pie-chart-card iot--card--wrapper"
      data-testid="basicCardStoryTest"
      id="basicCardStory"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="basicCardStoryTest-header"
      >
        <span
          className="iot--card--title"
          data-testid="basicCardStoryTest-title"
          title="Schools"
        >
          <div
            className="iot--card--title--text"
            data-testid="basicCardStoryTest-title-notip"
          >
            Schools
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="basicCardStoryTest-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="basicCardStoryTest-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="basicCardStoryTest-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--empty-state"
          data-testid="EmptyState"
        >
          <div
            className="iot--empty-state--content"
          >
            <svg
              alt=""
              className="iot--empty-state--icon"
              data-testid="EmptyState-icon"
              height={80}
              width={80}
            >
              <defs>
                <linearGradient
                  id="emptystate-Default-icon_svg__a-defaultIcon"
                  x1="37.502%"
                  x2="55.959%"
                  y1="34.928%"
                  y2="57.808%"
                >
                  <stop
                    offset="0%"
                    stopOpacity={0.04}
                  />
                  <stop
                    offset="100%"
                    stopOpacity={0.04}
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__b-defaultIcon"
                  x1="-63.062%"
                  x2="101.194%"
                  y1="77.587%"
                  y2="37.496%"
                >
                  <stop
                    offset="0%"
                    stopColor="#767676"
                  />
                  <stop
                    offset="100%"
                    stopColor="#929292"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__c-defaultIcon"
                  x1="73.167%"
                  x2="44.204%"
                  y1="89.948%"
                  y2="39.998%"
                >
                  <stop
                    offset="0%"
                    stopColor="#969696"
                  />
                  <stop
                    offset="100%"
                    stopColor="#E8E8E8"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__d-defaultIcon"
                  x1="-23.114%"
                  x2="57.391%"
                  y1="-11.496%"
                  y2="56.197%"
                >
                  <stop
                    offset="0%"
                    stopColor="#393939"
                  />
                  <stop
                    offset="99%"
                    stopColor="#525252"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__e-defaultIcon"
                  x1="5.255%"
                  x2="56.521%"
                  y1="115.2%"
                  y2="40.489%"
                >
                  <stop
                    offset="0%"
                    stopColor="#9C9C9C"
                  />
                  <stop
                    offset="100%"
                    stopColor="#C5C5C5"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__f-defaultIcon"
                  x1="45.625%"
                  x2="61.212%"
                  y1="38.922%"
                  y2="78.234%"
                >
                  <stop
                    offset="0%"
                    stopColor="#8A8A8A"
                  />
                  <stop
                    offset="100%"
                    stopColor="#B5B5B5"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__g-defaultIcon"
                  x1="57.243%"
                  x2="41.531%"
                  y1="31.727%"
                  y2="71.327%"
                >
                  <stop
                    offset="0%"
                    stopColor="#A4A4A4"
                  />
                  <stop
                    offset="100%"
                    stopColor="#BEBEBE"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__h-defaultIcon"
                  x1="27.599%"
                  x2="45.796%"
                  y1="69.394%"
                  y2="53.639%"
                >
                  <stop
                    offset="0%"
                    stopColor="#C2C2C2"
                  />
                  <stop
                    offset="100%"
                    stopColor="#E8E8E8"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__i-defaultIcon"
                  x1="62.356%"
                  x2="31.337%"
                  y1="64.634%"
                  y2="27.889%"
                >
                  <stop
                    offset="0%"
                    stopColor="#C6C6C6"
                  />
                  <stop
                    offset="100%"
                    stopColor="#E8E8E8"
                  />
                </linearGradient>
                <linearGradient
                  id="emptystate-Default-icon_svg__j-defaultIcon"
                  x1="62.354%"
                  x2="43.81%"
                  y1="114.244%"
                  y2="17.782%"
                >
                  <stop
                    offset="0%"
                    stopColor="#B7B7B7"
                  />
                  <stop
                    offset="100%"
                    stopColor="#EEE"
                  />
                </linearGradient>
              </defs>
              <g
                fill="none"
                fillRule="nonzero"
              >
                <path
                  d="M36.131 27.683c.03.03.065.053.103.069h.042l-.159-.09s0 .02.014.02z"
                  fill="#A8A8A8"
                />
                <path
                  d="M28.793.593L.041 17.241l28.835 16.697 28.758-16.62z"
                  fill="url(#emptystate-Default-icon_svg__a-defaultIcon)"
                  transform="translate(11.724 43)"
                />
                <path
                  d="M.069 16.207v24.476L28.062 24.51V.034L.07 16.207z"
                  fill="url(#emptystate-Default-icon_svg__b-defaultIcon)"
                  transform="translate(12.414 7.138)"
                />
                <path
                  d="M40.455 2.807L27.945.33 0 16.551l12.483 2.477z"
                  fill="url(#emptystate-Default-icon_svg__c-defaultIcon)"
                  transform="translate(0 4.38)"
                />
                <path
                  d="M27.986.276L0 16.462l28.048 16.241 27.986-16.151z"
                  fill="url(#emptystate-Default-icon_svg__d-defaultIcon)"
                  transform="translate(12.414 31.276)"
                />
                <path
                  d="M28.434 40.641V16.207L.47.034V24.47l27.965 16.172z"
                  fill="url(#emptystate-Default-icon_svg__e-defaultIcon)"
                  transform="translate(40 7.138)"
                />
                <path
                  d="M28.476 24.828V.352l-28 16.2v24.482l28-16.206z"
                  fill="url(#emptystate-Default-icon_svg__f-defaultIcon)"
                  transform="translate(40 23)"
                />
                <path
                  d="M28.062 41.007V16.524L.097.36v24.475l27.965 16.173z"
                  fill="url(#emptystate-Default-icon_svg__g-defaultIcon)"
                  transform="translate(12.414 23)"
                />
                <path
                  d="M28.517 20.407L40 16.84 11.952.607.469 4.172z"
                  fill="url(#emptystate-Default-icon_svg__h-defaultIcon)"
                  transform="translate(40 3)"
                />
                <path
                  d="M39.559 10.834L28.524.317.517 16.503l11.076 10.51z"
                  fill="url(#emptystate-Default-icon_svg__i-defaultIcon)"
                  transform="translate(40 23)"
                />
                <path
                  d="M28.276 31.848l10.227-15.296L10.455.276.235 15.606z"
                  fill="url(#emptystate-Default-icon_svg__j-defaultIcon)"
                  transform="translate(2.069 23)"
                />
                <path
                  d="M2.303 38.607l.063.041 10.158-15.227 27.966 16.2.082-.104-28.048-16.241z"
                  fill="#FFF"
                />
                <path
                  d="M68.69 23.503l-.2-.186-27.973 16.186 11.076 10.51.076-.054-10.855-10.345z"
                  fill="#FFF"
                />
                <path
                  d="M80 19.841l-.159-.09-11.324 3.511-27.89-16.124-.158.055 28.048 16.235z"
                  fill="#999"
                />
                <path
                  d="M68.517 23.262h.09L40.614 7.028v-.042l-.131.042 28.034 16.234z"
                  fill="#FFF"
                />
              </g>
            </svg>
            <h3
              className="iot--empty-state--title"
              data-testid="EmptyState-title"
            >
              No data for this card
            </h3>
            <p
              className="iot--empty-state--text"
              data-testid="EmptyState-body"
            >
              
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/PieChartCard with CardVariables 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--pie-chart-card iot--card--wrapper"
      data-testid="basicCardStoryTest"
      id="basicCardStory"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="basicCardStoryTest-header"
      >
        <span
          className="iot--card--title"
          data-testid="basicCardStoryTest-title"
          title="Schools"
        >
          <div
            className="iot--card--title--text"
            data-testid="basicCardStoryTest-title-notip"
          >
            Schools
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="basicCardStoryTest-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="basicCardStoryTest-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="basicCardStoryTest-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--pie-chart-container"
        >
          <div
            id="mock-pie-chart"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
